Overflow fixed

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -46,7 +46,7 @@ body, img{
     background-color: orange;
     border: none;
     border-radius: 5px;
-    width: 460px;
+    width: 440px;
     height: 40px;
     font-size: 24px;
     cursor: none !important;
@@ -65,6 +65,6 @@ body, img{
     }
     &-element {
         margin: 0 auto;
-        width: 460px;
+        width: 440px;
     }
 }
